--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
-python-telegram-bot==20.7
+python-telegram-bot[job-queue]==20.7
 pandas==2.0.3
 numpy==1.24.3
-talib-binary==0.4.28  # Для TA-Lib (тех. анализ)
+talib-binary==0.4.28
 matplotlib==3.7.2
-MetaTrader5==5.0.43   # Для работы с MT5 (опционально)
-python-dotenv==1.0.0  # Для работы с .env файлами
+MetaTrader5==5.0.43
+python-dotenv==1.0.0
 httpx[http2]==0.25.2
 apscheduler==3.10.4
+Flask==2.3.3
+gunicorn==21.2.0
+psutil==5.9.6  # Для метрик
