--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 python-telegram-bot[job-queue]==20.7
-pandas==2.0.3
-numpy==1.24.3
+pandas==2.2.2  # ← ОБНОВИТЬ до версии, совместимой с Python 3.13
+numpy==1.26.4
 talib-binary==0.4.28
-matplotlib==3.7.2
+matplotlib==3.8.3
 MetaTrader5==5.0.43
 python-dotenv==1.0.0
-httpx[http2]==0.25.2
+httpx[http2]==0.27.0
 apscheduler==3.10.4
-Flask==2.3.3
+Flask==3.0.3
 gunicorn==21.2.0
-psutil==5.9.6  # Для метрик
+psutil==5.9.8
+setuptools==69.5.1  # ← ДОБАВИТЬ для решения проблемы pkg_resources
