--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,11 @@
 # Python
 __pycache__/
 *.py[cod]
-*$py.class
 *.so
 .Python
 env/
 venv/
 ENV/
-env.bak/
-venv.bak/
 
 # Logs
 *.log
@@ -18,12 +15,15 @@ bot.log
 .env
 .env.local
 
+# OS
+.DS_Store
+Thumbs.db
+
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 
-# OS
-.DS_Store
-Thumbs.db
+# Render
+render.yaml.old
