--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-# Telegram Bot Configuration
-TELEGRAM_TOKEN=8486026880:AAGbFnjDCcNMZBfy4ssh-70vOWSeVI6mJA8
+# Telegram
+TELEGRAM_TOKEN=8486026880:AAHKeM0kBC2tKsnbhKG_oZr9vtUqU-KE2VU
 TELEGRAM_CHAT_ID=1037258513
 
-# Trading Bot Settings
-USE_MT5=false
-USE_DEMO_DATA=true
-TEST_MODE=true
+# MetaTrader 5
+MT5_LOGIN=52754246
+MT5_PASSWORD=!gK8QhSv
+MT5_SERVER=Alpari-MT5-Demo
 
-# Symbols to monitor
-SYMBOLS=XAUUSD,EURUSD,GBPUSD
-CHECK_INTERVAL=300
+# Server
+PORT=10000
+PYTHON_VERSION=3.9.18
