--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,28 @@
 services:
   - type: web
-    name: trading-bot
+    name: trading-bot-pro
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
-    startCommand: python bot_web.py
+    buildCommand: |
+      pip install --upgrade pip
+      pip install --no-cache-dir -r requirements.txt
+    startCommand: python bot_pro.py
     healthCheckPath: /health
     autoDeploy: true
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.0
+        value: 3.9.18
       - key: TELEGRAM_TOKEN
         sync: false
       - key: TELEGRAM_CHAT_ID
         value: "1037258513"
       - key: PORT
         value: "10000"
+      - key: MT5_LOGIN
+        sync: false  # ВВЕДИ ВРУЧНУЮ!
+      - key: MT5_PASSWORD
+        sync: false  # ВВЕДИ ВРУЧНУЮ!
+      - key: MT5_SERVER
+        value: "Alpari-MT5-Demo"
+      - key: CHECK_INTERVAL
+        value: "60"  # 1 минута для быстрого реагирования
