--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 python-telegram-bot==20.8
-Flask==3.0.3
+Flask==2.3.3  # ← DOWNGRADE Flask 3.0.3 → 2.3.3
 python-dotenv==1.0.0
 gunicorn==21.2.0
 apscheduler==3.10.4
@@ -8,4 +8,3 @@ numpy==1.24.3
 matplotlib==3.7.2
 Pillow==10.2.0
 requests==2.31.0
-yfinance==0.2.38  # Альтернатива MT5 для данных
